--- a/package.json
+++ b/package.json
@@ -11,10 +11,17 @@
   "dependencies": {
     "@nuxtjs/pwa": "^3.3.5",
     "core-js": "^3.25.3",
+    "global": "^4.4.0",
+    "module": "^1.2.5",
     "nuxt": "^2.15.8",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@nuxtjs/style-resources": "^1.2.1",
+    "fibers": "^5.0.3",
+    "node-sass": "^8.0.0",
+    "sass-loader": "^10.4.1"
+  }
 }
